[package]
name = "bytelang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", default-features = false }
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false, features = ["serde"] }
educe = { version = "0.4", default-features = false, optional = true }
i256 = { git = "https://github.com/vorot93/rust-i256" }
ethereum-types = { version = "0.12", default-features = false }
hex = "0.4"
hex-literal = { version = "0.3"}
num-traits = { version = "0.2", default-features = false }
once_cell = "1"
parking_lot = { version = "0.11", optional = true }
primitive-types = { version = "0.10", default-features = false, features = [
    "serde",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.9"
strum_macros = "0.21"
